third_party/move/move-compiler-v2/tests/match-checks/tuple_duplicate_vars.exp

Diagnostics:
error: duplicate declaration of `a`
  ┌─ tests/match-checks/tuple_duplicate_vars.move:5:17
  │
5 │             (a, a) => a,
  │              -  ^
  │              │
  │              previous declaration of `a`
